--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Binding\BindingConfig.cs" />
     <Compile Include="Binding\BindingManager.cs" />
     <Compile Include="Binding\ColorBinding.cs" />
+    <Compile Include="Binding\DoNothingBinding.cs" />
     <Compile Include="Binding\FlightControlManager.cs" />
     <Compile Include="Binding\FlightStats.cs" />
     <Compile Include="Binding\MissionSettings.cs" />
