Fixes #1565 - moved the "invalid target" logic.
The problem was caused by having the "invalid target" logic at too "deep" a level of the code, such that not only was it preventing you from selecting your own ship as a your target, but it was also preventing you from EVER using your own ship in the Vessel() constructor at all.

I had to move the logic that prevents invalid targets a bit higher up, getting it out of the low level constructor so it's possible to construct a Vessel() of your own ship.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Compilation\CompiledObject.cs" />
     <Compile Include="Compilation\CompilerOptions.cs" />
     <Compile Include="Exceptions\KOSAtmosphereObsoletionException.cs" />
+    <Compile Include="Exceptions\KOSInvalidTargetException.cs" />
     <Compile Include="Exceptions\KOSObsoletionException.cs" />
     <Compile Include="Exceptions\KOSPatchesObsoletionException.cs" />
     <Compile Include="Exceptions\KOSVolumeOutOfRangeException.cs" />
