Finally got a first draft of the code working.
The problem that sucked my time:  AudioSource.pitch is
apparently capped at about 20ish or so, making my
original plan (record at 1 Hz then speed it up 500 times
to get a 500 Hz tone) not work.

Once I knew that it could only pitch up or down a limited
amount, I knew to record the sample much higher.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -106,6 +106,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Sound\NoiseSoundWave.cs" />
+    <Compile Include="Sound\ProceduralSoundWave.cs" />
+    <Compile Include="Sound\PulseSoundWave.cs" />
+    <Compile Include="Sound\SinSoundWave.cs" />
     <Compile Include="Sound\SoundMaker.cs" />
     <Compile Include="Suffixed\CraftTemplate.cs" />
     <Compile Include="Suffixed\HsvColor.cs" />
