--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -109,8 +109,10 @@
     <Compile Include="Sound\NoiseSoundWave.cs" />
     <Compile Include="Sound\ProceduralSoundWave.cs" />
     <Compile Include="Sound\PulseSoundWave.cs" />
+    <Compile Include="Sound\SawtoothSoundWave.cs" />
     <Compile Include="Sound\SinSoundWave.cs" />
     <Compile Include="Sound\SoundMaker.cs" />
+    <Compile Include="Sound\TriangleSoundWave.cs" />
     <Compile Include="Suffixed\CraftTemplate.cs" />
     <Compile Include="Suffixed\HsvColor.cs" />
     <Compile Include="Suffixed\KUniverseValue.cs" />
