Migrate settings to new system
kOS.csproj
* References to new files.

kOSCustomParameters.cs
* Implement KSP's GameParameters.CustomParameterNode for most of kOS's
settings.
* Telnet settings are not included because telnet runs independent of
the save game.

kOSSettingsChecker.cs
* This MonoBehavior serves to check the new settings stored in
CustomParameter classes.
* It also manages the dialog boxes that may be displayed to the user if
the settings require user input.

Config.cs
* Switch Config to use the new CustomParameters.
* No longer add config keys for the migrated settings
* Keep the telenet settings where the previously were
* Fix SetSuffix so that it will return base.SetSuffix instead of false.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -94,8 +94,10 @@
     <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="KSPLogger.cs" />
     <Compile Include="Module\Bootstrapper.cs" />
+    <Compile Include="Module\kOSCustomParameters.cs" />
     <Compile Include="Module\kOSLightModule.cs" />
     <Compile Include="Module\KOSNameTag.cs" />
+    <Compile Include="Module\kOSSettingsChecker.cs" />
     <Compile Include="Module\kOSVesselModule.cs" />
     <Compile Include="Persistence\PersistenceExtensions.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
