--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -64,11 +64,8 @@
     <Compile Include="AddOns\InfernalRobotics\IRWrapper.cs" />
     <Compile Include="AddOns\RemoteTech\IRemoteTechAPIv1.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechAPI.cs" />
-    <Compile Include="AddOns\RemoteTech\RemoteTechArchive.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechHook.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechUtility.cs" />
-    <Compile Include="AddOns\RemoteTech\RemoteTechInterpreter.cs" />
-    <Compile Include="AddOns\RemoteTech\RemoteTechVolumeManager.cs" />
     <Compile Include="Binding\ActionGroups.cs" />
     <Compile Include="Binding\Binding.cs" />
     <Compile Include="Binding\BindingConfig.cs" />
@@ -78,13 +75,13 @@
     <Compile Include="Binding\FlightStats.cs" />
     <Compile Include="Binding\MissionSettings.cs" />
     <Compile Include="Binding\RoverStats.cs" />
+    <Compile Include="Communication\CommNetConnectivityManager.cs" />
+    <Compile Include="Communication\ConnectivityManager.cs" />
+    <Compile Include="Communication\kOSConnectivityParameters.cs" />
     <Compile Include="Control\SteeringManager.cs" />
     <Compile Include="Binding\TerminalSettings.cs" />
     <Compile Include="Binding\BindingsUniverse.cs" />
-    <Compile Include="AddOns\RemoteTech\RemoteTechFactory.cs" />
     <Compile Include="Control\IFlightControlParameter.cs" />
-    <Compile Include="Factories\IFactory.cs" />
-    <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\BuildList.cs" />
     <Compile Include="Function\HighlightStructure.cs" />
     <Compile Include="Function\Math.cs" />
@@ -100,11 +97,13 @@
     <Compile Include="Module\kOSSettingsChecker.cs" />
     <Compile Include="Module\kOSVesselModule.cs" />
     <Compile Include="Persistence\PersistenceExtensions.cs" />
+    <Compile Include="Persistence\ConnectivityVolumeManager.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Screen\ConnectivityInterpreter.cs" />
     <Compile Include="Sound\SoundMaker.cs" />
     <Compile Include="Suffixed\CraftTemplate.cs" />
     <Compile Include="Suffixed\HsvColor.cs" />
@@ -191,7 +190,7 @@
     <Compile Include="Communication\ProcessorManager.cs" />
     <Compile Include="Communication\InterVesselManager.cs" />
     <Compile Include="Serialization\ConfigNodeFormatter.cs" />
-    <Compile Include="Communication\ConnectivityManager.cs" />
+    <Compile Include="Communication\IConnectivityManager.cs" />
     <Compile Include="Communication\StockConnectivityManager.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechConnectivityManager.cs" />
     <Compile Include="Serialization\SerializationMgr.cs" />
