Bindings for connections and some documentation
ControlConnection.cs & HomeConnection.cs
* New classes for home and control connection checking
* Allows getting the delay, connection status, and destination
information
* Attempting to send a message throws an error

BindingsUniverse.cs
* Add binding to access ControlConnection and HomeConnection, with the
value itself cached.

kOS.csproj
* Add references to new files

IConnectivityManager.cs
* Add some documentation to the interface so that it

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Binding\RoverStats.cs" />
     <Compile Include="Communication\CommNetConnectivityManager.cs" />
     <Compile Include="Communication\ConnectivityManager.cs" />
+    <Compile Include="Communication\ControlConnection.cs" />
+    <Compile Include="Communication\HomeConnection.cs" />
     <Compile Include="Communication\kOSConnectivityParameters.cs" />
     <Compile Include="Control\SteeringManager.cs" />
     <Compile Include="Binding\TerminalSettings.cs" />
