--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -31,10 +31,10 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Resources\Assembly-CSharp.dll</HintPath>
+      <HintPath>C:\KSP\KSP_1.2.1debug\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\..\Resources\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>C:\KSP\KSP_1.2.1debug\KSP_x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\..\Resources\GameData\kOS\Plugins\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -47,10 +47,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Resources\UnityEngine.dll</HintPath>
+      <HintPath>C:\KSP\KSP_1.2.1debug\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\Resources\UnityEngine.UI.dll</HintPath>
+      <HintPath>C:\KSP\KSP_1.2.1debug\KSP_x64_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +176,10 @@
     <Compile Include="Suffixed\Widget\Box.cs" />
     <Compile Include="Suffixed\Widget\ScrollBox.cs" />
     <Compile Include="Suffixed\Widget\GUIWidgets.cs" />
+    <Compile Include="Suffixed\Widget\WidgetSkin.cs" />
+    <Compile Include="Suffixed\Widget\WidgetStyleState.cs" />
+    <Compile Include="Suffixed\Widget\WidgetStyleRectOffset.cs" />
+    <Compile Include="Suffixed\Widget\WidgetStyle.cs" />
     <Compile Include="Suffixed\Widget\Widget.cs" />
     <Compile Include="UserIO\TelnetMainServer.cs" />
     <Compile Include="UserIO\TelnetSingletonServer.cs" />
@@ -262,6 +266,13 @@
       xcopy "$(TargetPath)" "$(SolutionDir)\..\Resources\GameData\kOS\Plugins" /y
       IF EXIST "$(SolutionDir)\..\KSPdirlink\" xcopy "$(TargetPath)" "$(SolutionDir)\..\KSPdirlink\GameData\kOS\Plugins" /y || exit /B 0
     </PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetPath)" "C:\KSP\KSP_1.2.1debug\GameData\kOS\Plugins" /y
+
+      xcopy "$(TargetPath)" "$(SolutionDir)\..\Resources\GameData\kOS\Plugins" /y
+      IF EXIST "$(SolutionDir)\..\KSPdirlink\" xcopy "$(TargetPath)" "$(SolutionDir)\..\KSPdirlink\GameData\kOS\Plugins" /y || exit /B 0
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
