--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -238,6 +238,8 @@
     <Compile Include="Communication\PlanetariumTimeProvider.cs" />
     <Compile Include="Communication\Message.cs" />
     <Compile Include="Communication\MessageQueue.cs" />
+    <Compile Include="Communication\KscTarget.cs" />
+    <Compile Include="Screen\UplinkWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
