--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -83,6 +83,11 @@
     <Compile Include="Persistence\ArchiveAndHarddiskCopyAndMoveTest.cs" />
     <Compile Include="Persistence\ArchiveToHarddiskCopyAndMoveTest.cs" />
     <Compile Include="KS\ParserTest.cs" />
+    <Compile Include="Execution\BaseIntegrationTest.cs" />
+    <Compile Include="Execution\Noop.cs" />
+    <Compile Include="Execution\Config.cs" />
+    <Compile Include="Execution\Screen.cs" />
+    <Compile Include="Execution\SimpleTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
@@ -108,5 +113,8 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Execution\" />
   </ItemGroup>
 </Project>
