.gitignore: Visual Studio user specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 # VisualStudio
 [Bb]in/
 [Oo]bj/
+
+# User-specific files
 *.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Visual Studio 2015 cache/options directory
+.vs/
+
 packages/
 /src/kOS.sln.ide
 
