--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ netkan.exe
 
 #zip files for archived art assets
 *.zip
+
+# .swp files from vim (temporary files that vim creates when editing a file)
+*.swp
