adding DDS textures
-adding DDS textures
-adding modified kOSMachine0mLegacy part .cfg, that redirects the part to use the textures of the kOSMachine0m

--- a/Resources/GameData/kOS/Parts/kOSMachine0mLegacy/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine0mLegacy/part.cfg
@@ -6,7 +6,13 @@ module = Part
 author = SMA and Peter Goddard
 
 // --- asset parameters ---
-mesh = model/model.mu
+MODEL
+{
+	model = kOS/Parts/kOSMachine0mLegacy/model
+	texture = KR-2042_uv_layout_d, kOS/Parts/kOSMachine0m/KR-2042_uv_layout_d
+	texture = KR-2042_uv_layout_1_EMIS, kOS/Parts/kOSMachine0m/KR-2042_uv_layout_1_EMIS
+	texture = KR-2042_uv_layout_1_d_NRM, kOS/Parts/kOSMachine0m/KR-2042_uv_layout_1_d_NRM
+}
 scale = 1
 rescaleFactor = 1
 
