Fixes #2399 bulkhead profile fields added to parts

--- a/Resources/GameData/kOS/Parts/KOSCherryLight/part.cfg
+++ b/Resources/GameData/kOS/Parts/KOSCherryLight/part.cfg
@@ -5,6 +5,7 @@ PART
     module = Part
     author = Peter Goddard (pgodd) and Brad White (hvacengi)
     mesh = model/cherrylight.mu
+    bulkheadProfiles = size0, srf
     scale = 1
     rescaleFactor = 1
     node_stack_bottom = 0, -0.01, 0, 0, -90, 0, 0
