--- a/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
@@ -24,6 +24,7 @@ subcategory = 0
 title = KAL9000 Scriptable Control System
 manufacturer = Squalid State Devices
 description = Mildly Malevolent artificial entity, use caution on EVA's
+bulkheadProfiles = srf
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 0,1,0,0,0
