Fixes #2414 (GUI tooltips)
I decided to implement both (A) (Through GUIWidgets:TOOLTIP)
and (B) (Through the TipDisplay widget).

Option (C) from the issue would have been too much work to
implement quickly tonight, and I want to get something done
about this sooner than that.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Suffixed\VesselTarget.Parts.cs" />
     <Compile Include="Suffixed\WaypointValue.cs" />
     <Compile Include="Execution\TransferManager.cs" />
+    <Compile Include="Suffixed\Widget\TipDisplay.cs" />
     <Compile Include="Suffixed\Widget\Slider.cs" />
     <Compile Include="Suffixed\Widget\Spacing.cs" />
     <Compile Include="Suffixed\Widget\Label.cs" />
