Rework the SubBuffer/ScreenBuffer stack  - everything's a SubBuffer now  - cursor/printing positions are now absolute instead of screen relative  - no SplitLines strip newlines anymore  - fixes scrolling moving the cursor  - fixes resizing not moving the cursor correctly  - fixes the interactive prompt hiding output in the same lines  - fixes multiline interactive input  - fixes output containing explicit newlines

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Screen\IScreenBufferLine.cs" />
     <Compile Include="Screen\IScreenSnapshot.cs" />
     <Compile Include="Screen\ITermWindow.cs" />
+    <Compile Include="Screen\PrintingBuffer.cs" />
     <Compile Include="Screen\ScreenBuffer.cs" />
     <Compile Include="Screen\ScreenBufferLine.cs" />
     <Compile Include="Screen\ScreenSnapshot.cs" />
