--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -62,7 +62,7 @@
     <Compile Include="AddOns\InfernalRobotics\IRWrapper.cs" />
     <Compile Include="AddOns\Principia\Addon.cs" />
     <Compile Include="AddOns\Principia\PrincipiaWrapper.cs" />
-    <Compile Include="AddOns\Principia\PRManoeuvre.cs" />
+    <Compile Include="AddOns\Principia\PrManoeuvre.cs" />
     <Compile Include="AddOns\RemoteTech\IRemoteTechAPIv1.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechAPI.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechHook.cs" />
