Not working yet - bounding box

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Sound\TriangleSoundWave.cs" />
     <Compile Include="Sound\Voice.cs" />
     <Compile Include="Sound\VoiceValue.cs" />
+    <Compile Include="Suffixed\BoundsValue.cs" />
     <Compile Include="Suffixed\CraftTemplate.cs" />
     <Compile Include="Suffixed\KUniverseValue.cs" />
     <Compile Include="Suffixed\LoadDistanceValue.cs" />
