Multiple KSP 1.8 update issues:
1 - Need to Reference multiple different DLLs from Unity now.

2 - Note about WWW being obsoleted but we keep it anyway.

3 - Updated Shader from VectorRenderer to use SQUAD's provided
    legacy shaders that Unity no longer shippped with.

4 - Because of a change in how C# does reflection that occured between
    .Net 3.5 versus .Net 4.x, the means by which the Bound Variable
    attribute ([Binding("ksp")] is walked during initialization had
    to be changed because 4.0 sees similar attributes on different
    classes as "equal" while 3.5 saw them as "unequal".  We had a
    place where they were being used as dictionary keys and this
    change caused the keys to become "the same" and thus clash
    so it wouldn't walk most of the [Binding("ksp")] classes,
    skipping all of them after the first one it encountered.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\Resources\Assembly-CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\Resources\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
@@ -69,11 +73,14 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>..\..\Resources\UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\Resources\Assembly-CSharp.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\Resources\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UnityWebRequestAudioModule">
+      <HintPath>..\..\Resources\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UnityWebRequestModule">
+      <HintPath>..\..\Resources\UnityEngine.UnityWebRequestModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UnityWebRequestWWWModule">
       <HintPath>..\..\Resources\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
