I will probably abandon this branch - will use reflection
instead so it can tolerate having no ClickThruBlocker installed.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\Resources\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
+    <Reference Include="ClickThroughBlocker">
+      <HintPath>..\..\Resources\ClickThroughBlocker.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\..\Resources\GameData\kOS\Plugins\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
