--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -37,7 +37,8 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\Resources\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
-    <Reference Include="ClickThroughBlocker">
+    <Reference Include="ClickThroughBlocker, Version=0.1.9.5, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Resources\ClickThroughBlocker.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
