I massively altered the design so it can also do stages.
The originial PR only did delta-V for a vessel.  In order
to make it work for stages as well, I wanted to make a
new class, DeltaVCalc, that will wrapper-around the
difeferences between VesselDeltaV and DeltaVStageInfo.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Suffixed\ConsumedResourceValue.cs" />
     <Compile Include="Suffixed\ConsumedResourceValueRCS.cs" />
     <Compile Include="Suffixed\CraftTemplate.cs" />
+    <Compile Include="Suffixed\DeltaVCalc.cs" />
     <Compile Include="Suffixed\KUniverseValue.cs" />
     <Compile Include="Suffixed\LoadDistanceValue.cs" />
     <Compile Include="Suffixed\Part\DecouplerValue.cs" />
