Fixes #2782 by moving msg hooks around.
The best fix I could think of was to maintain a list of which
vessels' autopilots wanted to have the message on versus which
do not.  That avoids the problem of one vessel turning off the
flag when another vessel wanted it on.  Now there's a
HashSet of all the vessels that want the flag on.  As long as
there's at least one vessel that wants it on, it stays on.  Only
when all vessels want it off does it turn off.  Also,
the vessels can turn it off in their remove hooks code that
happens when their autopilots get destructed, thus avoiding the
scene change bug that the issue talked about.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Function\Suffixed.cs" />
     <Compile Include="KSPLogger.cs" />
     <Compile Include="Module\Bootstrapper.cs" />
+    <Compile Include="Module\AutopilotMsgManager.cs" />
     <Compile Include="Module\kOSCustomParameters.cs" />
     <Compile Include="Module\kOSLightModule.cs" />
     <Compile Include="Module\KOSNameTag.cs" />
