Refactored vecdraw GUIText to UIText and fixed scaling.
Some of the scaling of vecdraws was screwed up all along
and I found a better way to adjust their scaling by
distance from camera than I was using before.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -80,6 +80,9 @@
     <Reference Include="UnityEngine">
       <HintPath>..\..\Resources\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>..\..\Resources\UnityEngine.UIModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UnityWebRequestAudioModule">
       <HintPath>..\..\Resources\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
     </Reference>
