first attempt at some values for inventory volume

--- a/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
@@ -41,18 +41,24 @@ angularDrag = 2
 crashTolerance = 9
 maxTemp = 2000
 
-MODULE
-{
-	name = kOSProcessor
-	diskSpace = 10000
-	ECPerBytePerSecond = 0
-	ECPerInstruction = 0.000004
-}
+    MODULE
+    {
+            name = kOSProcessor
+            diskSpace = 10000
+            ECPerBytePerSecond = 0
+            ECPerInstruction = 0.000004
+    }
 
-RESOURCE
-{
-	name = ElectricCharge
-	amount = 5
-	maxAmount = 5
-}
+    RESOURCE
+    {
+            name = ElectricCharge
+            amount = 5
+            maxAmount = 5
+    }
+
+    MODULE
+    {
+        name = ModuleCargoPart
+        packedVolume = 650
+    }
 }
