--- a/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
@@ -58,4 +58,9 @@ MODULE
 	resourceAmount = 0.02
 	animationName = KAL9000Lives
 }
+MODULE
+{
+        name = ModuleCargoPart
+        packedVolume = 50
+}
 }
