--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Sound\TriangleSoundWave.cs" />
     <Compile Include="Sound\Voice.cs" />
     <Compile Include="Sound\VoiceValue.cs" />
+    <Compile Include="Suffixed\AttitudeController.cs" />
+    <Compile Include="Suffixed\AttitudeCorrectionResult.cs" />
     <Compile Include="Suffixed\BoundsValue.cs" />
     <Compile Include="Suffixed\ConsumedResourceValue.cs" />
     <Compile Include="Suffixed\ConsumedResourceValueRCS.cs" />
